--- a/src/app/Components/Messages/messages.component.html
+++ b/src/app/Components/Messages/messages.component.html
@@ -5,7 +5,7 @@
 
 <div class = "message-container">
 
-<div class ="message-content"><p>{{this.message.authorId}}</p> 
+<div class ="message-content"><p>{{this.username}}</p> 
 <pre> : </pre>    
 <p>{{this.message.content}}</p>
 </div>
